# ChangeLog for media-video/clive
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/clive/ChangeLog,v 1.62 2010/11/15 07:25:57 radhermit Exp $

*clive-2.2.17 (15 Nov 2010)

  15 Nov 2010; Tim Harder <radhermit@gentoo.org> +clive-2.2.17.ebuild:
  Version bump (fixes bug #329809 by Dennis Nezic). Add dependency on
  dev-perl/URI.

*clive-2.2.11 (12 Apr 2010)

  12 Apr 2010; Alexis Ballier <aballier@gentoo.org> +clive-2.2.11.ebuild:
  version bump, by hitachi <mail@konstantinhansen.de>, bug #306827

  25 Nov 2009; Markus Meier <maekke@gentoo.org> clive-2.2.6.ebuild:
  amd64 stable, bug #284544

  19 Nov 2009; Christian Faulhammer <fauli@gentoo.org> clive-2.2.6.ebuild:
  stable x86, bug 284544

*clive-2.2.7 (27 Oct 2009)

  27 Oct 2009; Alexis Ballier <aballier@gentoo.org> +clive-2.2.7.ebuild:
  version bump

  24 Oct 2009; nixnut <nixnut@gentoo.org> clive-2.2.6.ebuild:
  ppc stable #284544

  24 Sep 2009; Mounir Lamouri <volkmar@gentoo.org> clive-2.2.6.ebuild:
  Keywording for ppc. Fix bug 285496

  18 Sep 2009; Alexis Ballier <aballier@gentoo.org> -clive-2.2.5.ebuild:
  remove old

  18 Sep 2009; Alexis Ballier <aballier@gentoo.org> clive-2.2.6.ebuild:
  keyword ~ppc64, working fine on a PowerMac 970

*clive-2.2.6 (18 Sep 2009)

  18 Sep 2009; Alexis Ballier <aballier@gentoo.org> +clive-2.2.6.ebuild:
  version bump

  25 Aug 2009; Alexis Ballier <aballier@gentoo.org> -clive-2.2.2-r1.ebuild,
  -clive-2.2.4.ebuild:
  remove old

*clive-2.2.5 (25 Aug 2009)

  25 Aug 2009; Alexis Ballier <aballier@gentoo.org> +clive-2.2.5.ebuild:
  version bump

*clive-2.2.4 (02 Aug 2009)

  02 Aug 2009; Alexis Ballier <aballier@gentoo.org> +clive-2.2.4.ebuild:
  version bump

  02 Aug 2009; Alexis Ballier <aballier@gentoo.org> -clive-2.1.11.ebuild,
  -clive-2.1.12.ebuild, -clive-2.2.2.ebuild:
  remove old

*clive-2.2.2-r1 (22 Jul 2009)

  22 Jul 2009; Torsten Veller <tove@gentoo.org> +clive-2.2.2-r1.ebuild: