@@ -1,6 +1,11 @@
 # ChangeLog for media-video/clive
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/clive/ChangeLog,v 1.62 2010/11/15 07:25:57 radhermit Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/clive/ChangeLog,v 1.63 2011/01/07 21:18:15 aballier Exp $
+
+*clive-2.2.21 (07 Jan 2011)
+
+  07 Jan 2011; Alexis Ballier <aballier@gentoo.org> +clive-2.2.21.ebuild:
+  version bump
 
 *clive-2.2.17 (15 Nov 2010)
 
